packages/core/src/components/menu/menu.scss
/*
 * SPDX-FileCopyrightText: 2024 Siemens AG
 *
 * SPDX-License-Identifier: MIT
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

@use 'misc/common-variables' as vars;
@use 'mixins/hover';
@use 'mixins/shadow-dom/component';
@use '~animate.css/animate.min';

$menu-expanded-width: 16rem;

:host {
  display: flex;
  flex-direction: row;
  position: absolute;
  height: 100%;
  min-height: min-content;
  z-index: var(--theme-z-index-sticky);
  width: auto;

  bottom: 0;

  @include component.ix-component;

  .tabs {
    height: 100%;
    position: relative;
    overflow-y: auto;
    pointer-events: all;

    -ms-overflow-style: none;

    scrollbar-width: none;

    &::-webkit-scrollbar {
      display: none;
    }
  }

  .show-scrollbar {
    scrollbar-width: inherit;

    &::-webkit-scrollbar {
      display: inherit;
    }
  }

  .tabs-shadow-container {
    overflow: hidden;
    display: block;
    position: relative;
    margin-bottom: 0.75rem;
  }

  .tabs--shadow {
    opacity: 0;
    position: absolute;
    width: 100%;
    height: 0.625rem;

    background: linear-gradient(var(--theme-color-shadow-1), transparent);
    pointer-events: none;
    z-index: var(--theme-z-index-sticky);

    transition: opacity var(--theme-default-time);
  }
  .tabs--shadow-top {
    top: 0;
    background: linear-gradient(var(--theme-color-shadow-1), transparent);
  }

  .tabs--shadow-bottom {
    bottom: 0;
    background: linear-gradient(transparent, var(--theme-color-shadow-1));
  }

  .tabs--shadow--show {
    opacity: 1;
  }

  .menu {
    display: flex;
    flex-direction: column;
    position: relative;
    width: calc(3.25rem + var(--ix-application-menu-safe-area-left, 0rem));
    height: 100%;
    padding-block-end: calc(1rem + var(--ix-safe-area-inset-bottom, 0rem));
    overflow: hidden;

    padding-left: var(--ix-application-menu-safe-area-left, 0rem);

    &.expanded {
      box-shadow: var(--theme-navigation--box-shadow);
    }

    background-color: var(--theme-nav--background);
    transition: width var(--theme-default-time) ease-in-out;
  }

  .menu-overlay {
    display: none;
    position: absolute;
    width: calc(100vw - 3.25rem);
    height: 100%;
    left: 3.25rem;
    z-index: -1;
    backdrop-filter: blur(1rem);
    background-color: var(--theme-sidebar-overlay-blur);
    transition: left var(--theme-default-time) ease-in-out;
  }

  .menu-overlay.visible {
    display: block;
  }

  .menu.expanded {
    width: $menu-expanded-width;
  }

  .menu-overlay.expanded {
    width: calc(100vw - $menu-expanded-width);
    left: $menu-expanded-width;
  }

  .menu-overlay-container {
    display: contents;
  }

  .menu-avatar {
    max-height: 3rem;
  }

  .avatar {
    margin-bottom: 2rem;
  }

  #cui-imprint {
    .cui-imprint-product-name {
      margin-bottom: vars.$default-space;
    }

    .cui-imprint-product-description {
      margin-bottom: vars.$x-large-space;
    }

    .cui-imprint-link-container {
      display: flex;
      align-items: center;
    }
  }

  .bottom-tab-divider {
    margin-top: auto;
  }

  .menu-buttons {
    margin: 0.75rem 0 0 0.625rem;
  }

  .menu-buttons > :last-child {
    margin-bottom: 0.75rem;
  }
}

:host(.breakpoint-sm) {
  .menu:not(.expanded) {
    width: 0;
  }

  .menu-overlay {
    left: 0;
    width: 100vw;
  }
}

:host(.breakpoint-lg) {
  position: relative;

  .menu.expanded {
    box-shadow: none;
  }
}

:host {
  ::slotted(a[href]) {
    all: unset;
  }
}

